@@ -17,6 +17,7 @@ Gateway_ObjRef_Factory::
 make_object (const char *interface_repository_id,
              const PortableInterceptor::ObjectId & id
              ACE_ENV_ARG_DECL)
+  ACE_THROW_SPEC ((CORBA::SystemException))
 {
   CORBA::Object_var object =
     this->old_factory_->make_object (interface_repository_id,
